objects/ssot__AiRetrieverQualityMetric__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AgentGeneratedResponseText__c</fullName>
        <label>Agent Generated Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiGatewayRequestId__c</fullName>
        <label>AI Gateway Request Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiResponseGenerationId__c</fullName>
        <label>AI Response Generation Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiRetrieverRequestId__c</fullName>
        <label>AI Retriever Request Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AnswerRelevancyScoreNumber__c</fullName>
        <label>Answer Relevancy Score</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ContextPrecisionScoreNumber__c</fullName>
        <label>Context Precision Score</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FaithfulnessRelevancyScoreNumber__c</fullName>
        <label>Faithfulness Relevancy Score</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>AI Retriever Quality Metric Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastProcessedReqTimestamp__c</fullName>
        <label>Last Processed Request Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MetricCreatedTimestamp__c</fullName>
        <label>Metric Created Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RetrievedContextIdListText__c</fullName>
        <label>Retrieved Context Id List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RetrieverApiName__c</fullName>
        <label>Retriever Api Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RetrieverTraceId__c</fullName>
        <label>Retriever Trace Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RetrieverTraceSpanId__c</fullName>
        <label>Retriever Trace Span Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceDocumentIdListText__c</fullName>
        <label>Source Document Id List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UserUtteranceText__c</fullName>
        <label>UserUtterance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>